# at-spi2-core

./: .clang-format  .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  LINGUAS  MAINTAINERS  Makefile.am  NEWS  README  README.EARLY_ACCESS  README.md  README.msvc  TODO  acconfig.h  acinclude.m4  at-spi-1.0.pc.in  at-spi2-atk.desktop  at-spi2-atk.doap  at-spi2-core.doap  at-spi2.schemas.in  atk-bridge-2.0.pc.in  atk-uninstalled.pc.in  atk-zip.sh.in  atk.doap  atk.pc.in  atk.spec.in  atspi-2-uninstalled.pc.in  atspi-2.pc.in  autogen.sh  ca.po  config.h.win32.in  configure  configure.ac  configure.in  cspi-1.0-uninstalled.pc.in  (+6 more)
at-bridge/: Makefile.am  bridge.c
atk/: .cvsignore  .gitignore  Makefile.am  atk-autocleanups.h  atk-enum-types.c.template  atk-enum-types.h.template  atk.def  atk.h  atk.rc.in  atk.symbols  atkaction.c  atkaction.h  atkcomponent.c  atkcomponent.h  atkdocument.c  atkdocument.h  atkeditabletext.c  atkeditabletext.h  atkgobjectaccessible.c  atkgobjectaccessible.h  atkhyperlink.c  atkhyperlink.h  atkhyperlinkimpl.c  atkhyperlinkimpl.h  atkhypertext.c  atkhypertext.h  atkimage.c  atkimage.h  atkmarshal.list  atkmisc.c  atkmisc.h  atknoopobject.c  atknoopobject.h  atknoopobjectfactory.c  atknoopobjectfactory.h  atkobject.c  atkobject.h  atkobjectfactory.c  atkobjectfactory.h  atkplug.c  (+38 more)
atk-adaptor/: Makefile.am  Makefile.include  accessible-adaptor.c  accessible-cache.c  accessible-cache.h  accessible-leasing.c  accessible-leasing.h  accessible-marshaller.c  accessible-marshaller.h  accessible-register.c  accessible-register.h  accessible-stateset.c  accessible-stateset.h  accessible.c  accessible.h  action-adaptor.c  action.c  adaptors.h  application-adaptor.c  application.c  atk-bridge.desktop.in  atk-bridge.h  atk-dbus.c  atk-dbus.h  atkbridge.symbols  base.h  bitarray.h  bridge.c  bridge.h  collection-adaptor.c  collection.c  component-adaptor.c  component.c  devicelistener.h  document-adaptor.c  document.c  document.h  editabletext-adaptor.c  editabletext.c  event.c  (+42 more)
atk-bridge/: Makefile.am  bridge.c
atspi/: Makefile.am  atspi-accessible-private.h  atspi-accessible.c  atspi-accessible.h  atspi-action.c  atspi-action.h  atspi-application.c  atspi-application.h  atspi-collection.c  atspi-collection.h  atspi-component.c  atspi-component.h  atspi-constants.h  atspi-device-a11y-manager.c  atspi-device-a11y-manager.h  atspi-device-legacy.c  atspi-device-legacy.h  atspi-device-listener-private.h  atspi-device-listener.c  atspi-device-listener.h  atspi-device-mutter.c  atspi-device-mutter.h  atspi-device-x11.c  atspi-device-x11.h  atspi-device.c  atspi-device.h  atspi-document.c  atspi-document.h  atspi-editabletext.c  atspi-editabletext.h  atspi-enum-types.c.template  atspi-enum-types.h.template  atspi-event-listener-private.h  atspi-event-listener.c  atspi-event-listener.h  atspi-event-types.h  atspi-gmain.c  atspi-gmain.h  atspi-hyperlink.c  atspi-hyperlink.h  (+39 more)
bus/: 00-at-spi  Makefile.am  README  README.md  accessibility.conf  accessibility.conf.in  at-spi-bus-launcher.c  at-spi-dbus-bus.desktop  at-spi-dbus-bus.desktop.in  at-spi-dbus-bus.in  at-spi-dbus-bus.service.in  meson.build  org.a11y.Bus.service.in
common/: Makefile.am  bitarray.h  de-marshaller.c  de-marshaller.h  event-types.h  generated-types.h  spi-dbus.c  spi-dbus.h  spi-stateset.c  spi-stateset.h  spi-types.h
cspi/: Makefile.am  cspi-lowlevel.h  spi-accessible.c  spi-application.c  spi-component.c  spi-editabletext.c  spi-event.c  spi-hyperlink.c  spi-image.c  spi-impl.h  spi-listener-impl.c  spi-listener.c  spi-listener.h  spi-main.c  spi-private.h  spi-registry.c  spi-roletypes.h  spi-selection.c  spi-stateset.h  spi-statetypes.h  spi-streamablecontent.c  spi-text.c  spi-util.c  spi-util.h  spi.c  spi.h  spi_accessible.c  spi_action.c  spi_application.c  spi_collection.c  spi_component.c  spi_document.c  spi_editabletext.c  spi_event.c  spi_hyperlink.c  spi_hypertext.c  spi_image.c  spi_listener.c  spi_main.c  spi_matchrule.c  (+7 more)
dbind/: Makefile.am  dbind-any.c  dbind-any.h  dbind-config.h.in  dbind.c  dbind.h  dbtest.c  meson.build  org.freedesktop.atspi.Registry.service.in
devel-docs/: architecture.rst  at-spi3.rst  atk-deprecations.md  atk-deprecations.rst  atspi-python-stack.rst  conf.py  de-controller.md  de-controller.rst  gitlab-ci.md  gitlab-ci.rst  index.rst  meeting-2023-01-13.rst  meson.build  new-protocol.rst  roadmap.md  roadmap.rst  toolkits.md  toolkits.rst  xml-changes.rst  xml-interfaces.rst
doc/: Makefile.am  atk.toml.in  libatspi.toml.in  meson.build  urlmap.js
docs/: .cvsignore  Makefile.am  at-spi-docs.sgml  at-spi-sections.txt  atk-docs.sgml  atk-sections.txt  atk.types  meson.build
droute/: Makefile.am  droute-pairhash.c  droute-pairhash.h  droute-test.c  droute-variant.c  droute-variant.h  droute.c  droute.h  introspect-loader.c  introspect-loader.h  meson.build  test.interface.One  test.interface.Two
idl/: Accessibility.idl  Accessibility_Accessible.idl  Accessibility_Action.idl  Accessibility_Application.idl  Accessibility_Collection.idl  Accessibility_Component.idl  Accessibility_Desktop.idl  Accessibility_Document.idl  Accessibility_EditableText.idl  Accessibility_Event.idl  Accessibility_Hyperlink.idl  Accessibility_Hypertext.idl  Accessibility_Image.idl  Accessibility_LoginHelper.idl  Accessibility_Registry.idl  Accessibility_Relation.idl  Accessibility_Role.idl  Accessibility_Selection.idl  Accessibility_Selector.idl  Accessibility_State.idl  Accessibility_StreamableContent.idl  Accessibility_Table.idl  Accessibility_Text.idl  Accessibility_Value.idl  Accessible.idl  Action.idl  Application.idl  Component.idl  Desktop.idl  EditableText.idl  Event.idl  Hyperlink.idl  Hypertext.idl  Image.idl  Makefile.am  Registry.idl  Relation.idl  Role.idl  Selection.idl  State.idl  (+22 more)
libspi/: .cvsignore  Makefile.am  Makefile.in  accessible.c  accessible.h  accessibleeventlistener.c  accessibleeventlistener.h  action.c  action.h  application.c  application.h  atksimpleobject.c  atksimpleobject.h  base.c  base.h  collection.c  (+55 more)
(+835 files in other folders)
